# tt

./: .gitignore  Cargo.toml  README.md  deploy.ps1  rustfmt.toml  tt.config.json
.github/workflows/: rust.yml
res/: vsdbg.sh
scripts/: ash.json  local.ps1  macos.sh  release-win.ps1
src/: commands.rs  history.rs  main.rs  prelude.rs  select.rs  settings.rs  ssh.rs  teleport.rs
