[package]
name = "tt"
version = "0.3.3"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
directories = "5.0.0"
itertools = "0.10.5"
dialoguer = { git = "https://github.com/mitsuhiko/dialoguer", rev = "0c8b5e5a", features = [
    "fuzzy-select",
] }
fuzzy-matcher = "0.3.7"
eyre = { version = "0.6" }
clap_complete = "4.0.7"
const_format = "0.2.30"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.
panic = "abort"
